--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/TemaInicial">
-
+        <uses-library
+            android:name="com.google.android.maps" />
         <activity
             android:name=".ProductsActivity"
             android:exported="false" />
 
         <activity
             android:name=".mapas.MapsActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
